# cuda-dojo

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  mkdocs.yml  requirements.txt
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: docs.yml
cmake/: Dojo.cmake
common/dojo/: cuda_utils.cuh  test.hpp
docs/: CNAME  index.md  level00-mental-model.md  level01-basics.md  level02-thread-mapping.md  level03-execution-model.md  level03-memory-hierarchy.md  level04-memory-hierarchy.md  level04-performance.md  level05-performance.md  level05-shared-memory.md  level06-shared-memory.md  level06-warps.md  level07-libraries.md  level07-warps.md  level08-streams.md  level08-synchronization-scopes.md  level09-libraries.md  level09-multi-kernel.md  level10-optimization.md  level10-streams.md  level11-advanced.md  level11-multi-kernel.md  level11-orchestration.md  level12-architecture.md  level12-optimization.md  level13-algorithm-design.md  level13-orchestration.md  level14-architecture.md  level14-tile-pipeline.md  level15-algorithm-design.md  level16-tile-pipeline.md  track-architecture.md  track-imaging.md  track-libraries.md
docs/assets/: dojo.css  dojo.js
levels/level01_vector_add/: CMakeLists.txt  demo.cu  level01.cuh  reduction.cu  saxpy.cu  test_level01.cu  vector_add.cu
levels/level02_thread_mapping/: CMakeLists.txt  crop.cu  demo.cu  invert.cu  level02.cuh  test_level02.cu  transpose_naive.cu
levels/level03_execution_model/: CMakeLists.txt  demo.cpp  test_level03.cpp
levels/level03_memory_hierarchy/: CMakeLists.txt  blur3x3_constant.cu  blur3x3_global.cu  demo.cu  level03.cuh  test_level03.cu  transpose_naive.cu  transpose_tiled.cu
levels/level04_memory_hierarchy/: CMakeLists.txt  blur3x3_constant.cu  blur3x3_global.cu  demo.cu  level04.cuh  test_level04.cu  transpose_naive.cu  transpose_tiled.cu
levels/level04_performance/: CMakeLists.txt  box_blur_naive.cu  box_blur_opt.cu  demo.cu  level04.cuh  sobel.cu  test_level04.cu
levels/level05_performance/: CMakeLists.txt  box_blur_naive.cu  box_blur_opt.cu  demo.cu  level05.cuh  sobel.cu  test_level05.cu
levels/level05_shared_memory/: CMakeLists.txt  box_filter_shared.cu  demo.cu  level05.cuh  separable_blur.cu  swizzle_demo.cu  test_level05.cu
levels/level06_shared_memory/: CMakeLists.txt  box_filter_shared.cu  demo.cu  level06.cuh  separable_blur.cu  swizzle_demo.cu  test_level06.cu
levels/level06_warps/: CMakeLists.txt  demo.cu  level06.cuh  test_level06.cu  warp_histogram.cu  warp_reduce.cu
levels/level07_warps/: CMakeLists.txt  demo.cu  level07.cuh  test_level07.cu  warp_histogram.cu  warp_reduce.cu
site/: 404.html  index.html
site/assets/: dojo.css
site/level00-mental-model/: index.html
site/level01-basics/: index.html
site/level02-thread-mapping/: index.html
site/level03-memory-hierarchy/: index.html
site/level04-performance/: index.html
site/level05-shared-memory/: index.html
site/level06-warps/: index.html
site/level07-libraries/: index.html
site/level08-streams/: index.html
site/level09-multi-kernel/: index.html
site/level10-optimization/: index.html
site/level11-advanced/: index.html
site/level12-architecture/: index.html
site/level13-algorithm-design/: index.html
site/search/: search_index.json
